IE Grid fixes and IE scrollbars hidden in desktop preview

--- a/css/main.scss
+++ b/css/main.scss
@@ -248,6 +248,7 @@ div#hero {
     }
 
     section#text {
+        -ms-grid-column: 2; 
         grid-area: text;
         // padding-left: 1.5em;
         text-align: center;
@@ -255,6 +256,7 @@ div#hero {
     }
 
     section#button-container {
+        -ms-grid-column: 3;
         grid-area: button;
         justify-self: center;
         text-align: center;
@@ -353,6 +355,7 @@ div#preview {
     
 
     section#desktop {
+        -ms-grid-column: 2;
         grid-area: desktop;
         justify-self: center;
         text-align: center;
@@ -368,6 +371,7 @@ div#preview {
 
         section#desktop-container {
             overflow: scroll;
+            -ms-overflow-style: none;
 
             &::-webkit-scrollbar {
                 display: none;
@@ -416,6 +420,7 @@ div#preview {
     }
 
     section#mobile {
+        -ms-grid-column: 3;
         grid-area: mobile;
         justify-self: center;
         text-align: center;
@@ -464,6 +469,8 @@ div#preview {
     } */
 
     #bottom {
+        -ms-grid-column-span: 2;
+        -ms-grid-row: 2;
         grid-column-start: span 2;
         justify-self: center;
         margin-top: 50px;
@@ -471,10 +478,12 @@ div#preview {
         text-align: center;
 
         @include fullDesktopUpper() {
+            -ms-grid-column: 2;
             grid-column-start: span 4; 
             max-width: 1000px;
         }
         @include tablet() {
+            -ms-grid-column: 1;
             max-width: 80%;
             margin: 50px auto 0 auto;
         }
@@ -530,6 +539,7 @@ footer {
     }
 
     section#footer1 {
+        -ms-grid-column: 1;
         grid-area: footer1;
 
         div a.download {
@@ -540,6 +550,7 @@ footer {
     }
 
     section#footer2 {
+        -ms-grid-column: 2;
         grid-area: footer2;
         
         div a.download {
@@ -556,6 +567,8 @@ footer {
 
 
     #copyright {
+        -ms-grid-column-span: 2;
+        -ms-grid-row: 2;
         grid-column-start: span 2;
         text-align: center;
         margin-top: 40px;
